# ds6051-hackathon

./: README.md  analysis.ipynb  bash_command_basics.txt  checklist.md  colab_setup.sh  inference_boilerplate.py  inference_timing_test.py  judge_prompts.md  llm_judge_boilerplate.py  prepare_dataset.py  project_overview.md  pyproject.toml  requirements.txt  run_inference.py  run_judges.py
data/: eval_prompts.jsonl  judgments.json  judgments_lenient.json  responses.json  scorecard.csv
