[project]
name = "ds6051"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "huggingface-hub[cli]>=1.22.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.13.0",
]
